--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   }
 }
