--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "src/**/*.test.tsx",
-    "src/**/*.stories.tsx"
+    "src/**/**.test.tsx",
+    "src/**/**.stories.tsx"
   ]
 }
