--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
@@ -56,5 +57,8 @@
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "dependencies": {
+    "react-icons": "^4.10.1"
+  }
 }
