build: add tsc support and remove rollup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,15 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
     "sourceMap": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "moduleResolution": "node",
-    "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": [
     "dist",
     "node_modules",
