--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "tsc -p ./tsconfig.json",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -47,12 +50,13 @@
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.26.3",
-    "rollup-plugin-dts": "^5.3.0",
+    "rollup": "^3.28.0",
+    "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "storybook": "^7.2.0",
     "tailwindcss": "^3.3.3",
+    "tsc": "^2.0.4",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
