revert: change tsconfig module to esnext

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
-    "module": "CommonJS",
+    "module": "ESNext",
     "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
