--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.5",
     "@storybook/blocks": "^7.2.0",
+    "@storybook/manager-api": "^7.3.0-alpha.0",
     "@storybook/react": "^7.2.0",
     "@storybook/react-webpack5": "^7.2.0",
     "@storybook/testing-library": "^0.2.0",
+    "@storybook/theming": "^7.3.0-alpha.0",
+    "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
