--- a/package.json
+++ b/package.json
@@ -59,6 +59,12 @@
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
-    "react-icons": "^4.10.1"
+    "@radix-ui/react-slider": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.268.0",
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
