--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-slider": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
